<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dailycalculator">

    <fragment
        android:id="@+id/nav_dailycalculator"
        android:name="it.carmelolagamba.giuridimath.ui.dailycalculator.DailyCalculatorFragment"
        android:label="@string/menu_dailycalculator_title"
        tools:layout="@layout/fragment_daily_calculator" />

    <fragment
        android:id="@+id/nav_dayoff"
        android:name="it.carmelolagamba.giuridimath.ui.calculator.CalculatorFragment"
        android:label="@string/menu_calculator_title"
        tools:layout="@layout/fragment_calculator" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="it.carmelolagamba.giuridimath.ui.settings.SettingsFragment"
        android:label="@string/menu_settings_title"
        tools:layout="@layout/fragment_settings" />
</navigation>