<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.calculator.DailyCalculatorFragment">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_layout"
        android:orientation="vertical"
        android:weightSum="2">


        <LinearLayout
            android:id="@+id/header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/current_day_hours"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?attr/GMHighlightColor"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_default" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="fill_horizontal"
            android:padding="5dp">

            <LinearLayout
                android:id="@+id/body_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:padding="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.4"
                    android:gravity="start|center"
                    android:text="@string/home_insert_number_label"
                    android:textColor="?attr/GMColorPrimary"
                    android:textSize="@dimen/text_size_medium" />

                <ImageView
                    android:id="@+id/info_icon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.05"
                    android:src="@drawable/ic_info"
                    app:tint="?attr/GMColorSecondary" />

                <EditText
                    android:id="@+id/hours"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:autofillHints=""
                    android:backgroundTint="?attr/GMColorSecondary"
                    android:ems="3"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:hint="@string/home_insert_number_placeholder"
                    android:labelFor="@id/hours"
                    android:saveEnabled="false"
                    android:textSize="@dimen/text_size_medium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/result_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="start|center"
                    android:text="@string/home_result"
                    android:textColor="?attr/GMColorPrimary"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.8"
                    android:autofillHints="1234.56"
                    android:backgroundTint="?attr/GMColorSecondary"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_medium" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:background="?attr/GMBackgroundColor"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clean_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="?attr/GMHighlightColor"
            android:text="@string/home_clean_label"
            android:textColor="@color/white" />
    </LinearLayout>


</RelativeLayout>